# etrm-notebook

./: pyproject.toml  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json
notebooks/: montecarlo.ipynb
notebooks/amedas/: AMeDAS_list.csv  download.py  html_parser.py  target.yaml
notebooks/amedas/processed_html/10min/47662_東京/2024/: 47662_東京_2024_04_01.csv
notebooks/amedas/processed_html/hourly/47662_東京/2024/: 47662_東京_2024_04_01.csv
notebooks/fuel_price/: lng_cif.csv
notebooks/jepx/: spot_summary_2024.csv
notebooks/tso/tokyo/: area-2023.csv  eria_jukyu_202402_03.csv  eria_jukyu_202403_03.csv
