[project]
name = "default"
version = "0.1.0"
description = "This repository contains configurations to set up a Python development environment using VSCode's Dev Container feature. The environment includes uv and Ruff."
authors = [
    {name = "a5chin", email = "a5chin.origin+contact@gmail.com"}
]
maintainers = [
    {name = "a5chin", email = "a5chin.origin+contact@gmail.com"}
]
requires-python = ">=3.9"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "arch>=7.1.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "nbformat>=5.10.4",
    "pandas>=2.2.2",
    "plotly>=5.24.1",
    "prophet>=1.1.6",
    "requests>=2.32.3",
    "scikit-learn>=1.5.2",
    "scipy>=1.13.1",
    "statsmodels>=0.14.4",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "pre-commit>=3.8.0",
    "ruff>=0.6.3",
    "ipykernel>=6.29.5",
]
